--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 error = "0.1.9"
+fmt = "0.1.0"
 reqwest = { version = "0.13.1", features = ["blocking", "query", "json"] }
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.149"
